[gd_scene load_steps=33 format=2]

[ext_resource path="res://GUI/start_Gui.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Backgrounds/world1_bg.png" type="Texture" id=2]
[ext_resource path="res://Tiles/TailesWithGras.tres" type="TileSet" id=3]
[ext_resource path="res://Sprites/Player/Idle0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Jump0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Jump1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Run0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Run1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Run2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Run3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Run4.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Run7.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/Jump3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/Jump4.png" type="Texture" id=14]
[ext_resource path="res://Sounds/Player sounds/jump.wav" type="AudioStream" id=15]
[ext_resource path="res://Scenes/coin.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Chest.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=18]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 normal/play_normal.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 pressed/play_pressed.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 normal/bonus_normal.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 pressed/bonus_pressed.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 normal/achievements_normal.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 pressed/achievements_pressed.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 normal/settings_normal.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Gui/Buttons/96x96 pressed/settings_pressed.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Gui/Buttons/normal/music_normal.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Gui/Buttons/normal/sound_normal.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 2.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "fire",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 14.0
height = 28.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Gui" type="Node" index="0"]

script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

scale = Vector2( 0.333333, 0.352941 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 1088 )
_sections_unfolded = [ "Offset" ]

[node name="tile" type="TileMap" parent="." index="1"]

position = Vector2( 1.36035, 1.36037 )
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 131085, 0, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 2, 0, 196621, 4, 0, 196622, 5, 0, 196623, 5, 0, 196624, 5, 0, 196625, 6, 0, 327687, 0, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 2, 0, 393223, 4, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 6, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 2, 0, 524305, 0, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 655359, 7, 0, 589824, 7, 0, 589825, 7, 0, 589826, 12, 0, 589841, 3, 0, 589842, 7, 0, 589843, 7, 0, 589844, 7, 0, 720895, 7, 0, 655360, 7, 0, 655361, 7, 0, 655362, 12, 0, 655377, 3, 0, 655378, 7, 0, 655379, 7, 0, 655380, 7, 0, 786431, 7, 0, 720896, 7, 0, 720897, 7, 0, 720898, 12, 0, 720913, 3, 0, 720914, 7, 0, 720915, 7, 0, 720916, 7, 0 )
_sections_unfolded = [ "Cell" ]

[node name="Player" type="KinematicBody2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 64, 224 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Player" index="0"]

z_index = 3
frames = SubResource( 1 )
animation = "idle"
playing = true
_sections_unfolded = [ "Z Index" ]

[node name="Camera2D" type="Camera2D" parent="Player" index="1"]

position = Vector2( -0.00976562, 3.97665 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = 0
limit_top = 0
limit_right = 4200
limit_bottom = 380
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" index="2"]

position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="jump_sound" type="AudioStreamPlayer" parent="Player" index="3"]

stream = ExtResource( 15 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="coins" type="Node2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 16.6204, 0 )

[node name="Coin" parent="coins" index="0" instance=ExtResource( 16 )]

position = Vector2( 256, 128 )

[node name="Coin2" parent="coins" index="1" instance=ExtResource( 16 )]

position = Vector2( 288, 128 )

[node name="Coin3" parent="coins" index="2" instance=ExtResource( 16 )]

position = Vector2( 320, 128 )

[node name="Coin4" parent="coins" index="3" instance=ExtResource( 16 )]

position = Vector2( 352, 128 )

[node name="Coin5" parent="coins" index="4" instance=ExtResource( 16 )]

position = Vector2( 288, 96 )

[node name="Coin6" parent="coins" index="5" instance=ExtResource( 16 )]

position = Vector2( 320, 96 )

[node name="chest" type="Node2D" parent="." index="4"]

editor/display_folded = true

[node name="Chest" parent="chest" index="0" instance=ExtResource( 17 )]

position = Vector2( 603.356, 240.585 )

[node name="enemy" type="Node2D" parent="." index="5"]

editor/display_folded = true

[node name="Enemy" parent="enemy" index="0" instance=ExtResource( 18 )]

position = Vector2( 443.082, 37.7472 )

[node name="buttons" type="Node2D" parent="." index="6"]

editor/display_folded = true

[node name="play_btn" type="TouchScreenButton" parent="buttons" index="0"]

position = Vector2( 276.717, 174.698 )
scale = Vector2( 0.9, 0.9 )
normal = ExtResource( 19 )
pressed = ExtResource( 20 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="level_btn" type="TouchScreenButton" parent="buttons" index="1"]

position = Vector2( 290.226, 262.815 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 21 )
pressed = ExtResource( 22 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="achievement_btn" type="TouchScreenButton" parent="buttons" index="2"]

position = Vector2( 172, 262 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 23 )
pressed = ExtResource( 24 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="settings_btn" type="TouchScreenButton" parent="buttons" index="3"]

position = Vector2( 404.96, 262 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 25 )
pressed = ExtResource( 26 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="m_btn" type="Sprite" parent="buttons" index="4"]

editor/display_folded = true
position = Vector2( 25.7824, 22.8922 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 27 )

[node name="music_btn" type="TouchScreenButton" parent="buttons/m_btn" index="0"]

position = Vector2( -1.35088, -1.46782 )
scale = Vector2( 2.31419, 2.40623 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 3 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="s_btn" type="Sprite" parent="buttons" index="5"]

editor/display_folded = true
position = Vector2( 71.2022, 23.1358 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 28 )

[node name="sound_btn" type="TouchScreenButton" parent="buttons/s_btn" index="0"]

position = Vector2( -2.08047, -1.50258 )
scale = Vector2( 2.36405, 2.39524 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 4 )
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[connection signal="released" from="buttons/play_btn" to="." method="_on_play_btn_released"]

[connection signal="pressed" from="buttons/settings_btn" to="." method="_on_settings_btn_pressed"]

[connection signal="released" from="buttons/settings_btn" to="." method="_on_settings_btn_released"]


